Corrected validations in property creation form and sign up form.

--- a/persistence/src/main/resources/i18n/messages.properties
+++ b/persistence/src/main/resources/i18n/messages.properties
@@ -1,15 +1,25 @@
 NotBlank=Please complete the above field.
+
 NotBlank.name=Please enter your first name.
 NotBlank.lastName=Please enter your last name.
 Pattern.email=Please provide a valid email.
 Size.password=Password length must be between {2} and {1} charcters.
 Size.repeatPassword=Please repeat your password.
-NotBlank.birthDate=Please enter your birth date.
-Size.birthDate=Date must be in format dd/mm/yyyy.
 NotBlank.bio=Please write a short description of yourself.
 Size.bio=Bio length can be of up to {1} charcters.
 Size.phoneNumber=Please enter a valid phone number.
-NotNull.universityId=Please select a university from the list.
-NotNull.careerId=Please select a career from the list.
+Range.universityId=Please select a university from the list.
+Range.careerId=Please select a career from the list.
+Range.gender=Please select a gender from the list.
+Range.role=Please select a role from the list.
 Pattern.birthDate=Please enter the date in yyyy-MM-dd format
-Size=
+
+NotBlank.caption=Please enter a caption for the property.
+Size.caption=Caption length must be under {1} characters.
+NotBlank.description=Please enter a description for the property.
+Size.description=Description length must be under {1} characters.
+
+Range.propertyType=Please select a property type.
+Range.neighbourhoodId=Please select a neighborhood.
+Range.privacyLevel=Please select a privacy level.
+Range.capacity=Please select a value between 1 and 100
