proposal view, not reachable yet

--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -9,3 +9,8 @@ label.english=Inglés
 
 label.properties.seeMore=Ver más
 label.properties.noProperties=Ups, no hay más propiedades
+
+label.proposal.proposal=Propuesta
+label.proposal.accept=Aceptar
+label.proposal.decline=Rechazar
+label.proposal.cancel=Cancelar
