--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -9,3 +9,8 @@ label.english=English
 
 label.properties.seeMore=See more
 label.properties.noProperties=Oops, there are no properties loaded
+
+label.proposal.proposal=Proposal
+label.proposal.accept=Accept
+label.proposal.decline=Decline
+label.proposal.cancel=Cancel
