Fixed issue #37 (Problem with javax validation and hibernate validator versions)

--- a/persistence/src/main/resources/i18n/messages.properties
+++ b/persistence/src/main/resources/i18n/messages.properties
@@ -14,10 +14,15 @@ Range.gender=Please select a gender from the list.
 Range.role=Please select a role from the list.
 Pattern.birthDate=Please enter the date in yyyy-MM-dd format
 
-NotBlank.caption=Please enter a caption for the property.
-Size.caption=Caption length must be under {1} characters.
-NotBlank.description=Please enter a description for the property.
-Size.description=Description length must be under {1} characters.
+#NotBlank.caption=Please enter a caption for the property.
+Size.caption=Please enter a caption of length under {1} characters.
+Size.min.caption=Please enter a caption for the property.
+
+#NotBlank.description=Please enter a description for the property.
+Size.max.description=Description length must be under {1} characters.
+Size.min.description=Please enter a description for the property.
+
+
 
 Range.propertyType=Please select a property type.
 Range.neighbourhoodId=Please select a neighborhood.
