--- a/persistence/src/main/resources/i18n/messages.properties
+++ b/persistence/src/main/resources/i18n/messages.properties
@@ -1,27 +1,23 @@
-NotBlank=Please complete the above field.
 
+#Sign Up form
 NotBlank.name=Please enter your first name.
 NotBlank.lastName=Please enter your last name.
 Pattern.email=Please provide a valid email.
 Size.password=Password length must be between {2} and {1} charcters.
 Size.repeatPassword=Please repeat your password.
-NotBlank.bio=Please write a short description of yourself.
-Size.bio=Bio length can be of up to {1} charcters.
-Size.phoneNumber=Please enter a valid phone number.
+Size.bio=Please enter a Bio of length under {1} charcters.
+Range.phoneNumber=Please enter a valid phone number.
 Range.universityId=Please select a university from the list.
 Range.careerId=Please select a career from the list.
 Range.gender=Please select a gender from the list.
 Range.role=Please select a role from the list.
 Pattern.birthDate=Please enter the date in yyyy-MM-dd format
 
-#NotBlank.caption=Please enter a caption for the property.
+#Property creation form
 Size.caption=Please enter a caption of length under {1} characters.
-Size.min.caption=Please enter a caption for the property.
-
-#NotBlank.description=Please enter a description for the property.
-Size.max.description=Description length must be under {1} characters.
-Size.min.description=Please enter a description for the property.
-
+Size.description=Please enter a description of length under {1} characters.
+DecimalMin.price=Price must be of at least $1
+DecimalMax.price=Price must be under $100000000
 
 
 Range.propertyType=Please select a property type.
