profile connected to controller

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -9,3 +9,8 @@ label.english=English
 
 label.properties.seeMore=See more
 label.properties.noProperties=Oops, there are no properties loaded
+
+label.profile.bio=Bio
+label.profile.interests=Interests
+label.profile.proposals=Proposals
+label.profile.noInterests=You are not interested in any properties
