--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -9,3 +9,8 @@ label.english=Inglés
 
 label.properties.seeMore=Ver más
 label.properties.noProperties=Ups, no hay más propiedades
+
+label.profile.bio=Biografía
+label.profile.interests=Intereses
+label.profile.proposals=Propuestas
+label.profile.noInterests=No estás interesado en ninguna propiedad
