Internationalize the whole website (#43)

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -1,14 +1,77 @@
 label.title=Welcome
-
-label.nav.signup=Sign up
-label.nav.login=Log in
+label.signup=Sign up
+label.login=Log in
 label.nav.or=or
-
 label.spanish=Spanish
 label.english=English
-
 label.properties.seeMore=See more
 label.properties.noProperties=Oops, there are no properties loaded
+label.forgot_password=Forgot?
+label.password=Your password
+label.remember_me=Remember me
+label.property=Property
+label.host=Host
+label.guest=Student
+label.terms_of_use=By clicking the '{0}' button, you confirm that you accept our <br> Terms of use and Privacy Policy.
+label.have_account=Have an account? <a href="/user/logIn">{0}</a>
+
+user.greeting=Hi, {0}!
+user.logout=Log out
+user.interested=I'm Interested
+user.not_interested=Not Interested Anymore
+user.interested_users=Interested users
+user.create_proposal=Create proposal
+
+property.no_users_interested=No other users have shown interest in this property!
+property.no_special_rules=This property has no special rules
+property.no_special_services=This property has no special services
+
+host.publish_property=Publish a property
+
+system.successfully_uploaded=The pictures were successfully uploaded!
+system.upload_error=Please upload at least 1 picture of the property.
+system.property.no_images_error=Oops, there are no images for this property
+system.must_be_logged_in_interest=You must be logged in to show interest.
+system.invalid_user_or_pass=Invalid username or password
+
+forms.image_upload_instructions=Upload up to 4 pictures of the property:
+forms.upload_picture= Picture {0} to upload:
+forms.name=Name
+forms.description=Description
+forms.property_type=Property type:
+forms.choose=Choose
+forms.house=House
+forms.apartment=Apartment
+forms.loft=Loft
+forms.upload=Upload
+forms.neighborhood=Neighborhood:
+forms.privacy=Privacy
+forms.privacy.individual=Individual
+forms.privacy.shared=Shared
+forms.capacity=Capacity
+forms.rent_per_month=Rent per month:
+forms.rules=Rules:
+forms.services=Services:
+forms.email=Your Email:
+
+placeholder.choose_file=Choose File
+placeholder.include_details=Include more details of the property...
+placeholder.bio_placeholder=Tell us a little about yourself...
+
+signup.email=Your email address
+signup.password=Password
+signup.re_password=Re-enter your password
+signup.first_name=First name
+signup.last_name=Last name
+signup.phone_number=Phone Number
+signup.birth_date=Date of Birth
+signup.university=University
+signup.career=Career
+signup.gender=Gender
+signup.gender.male=Male
+signup.gender.female=Female
+signup.gender.other=Other
+signup.i-am=I am a.
 
 label.profile.bio=Bio
 label.profile.interests=Interests
@@ -19,3 +82,4 @@ label.proposal.proposal=Proposal
 label.proposal.accept=Accept
 label.proposal.decline=Decline
 label.proposal.cancel=Cancel
+
