--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -1,14 +1,82 @@
-label.title=Binvenido
-
-label.nav.signup=Registrarse
-label.nav.login=Ingresar
-label.nav.or=o 
-
+label.title=Bienvenido
+label.signup=Registrarse
+label.login=Ingresar
+label.nav.or=o
 label.spanish=Español
 label.english=Inglés
-
 label.properties.seeMore=Ver más
 label.properties.noProperties=Ups, no hay más propiedades
+label.forgot_password=Olvidaste?
+label.password=Tu Contraseña
+label.remember_me=Recordarme
+label.property=Propiedad
+label.host=Propietario
+label.guest=Estudiante
+label.terms_of_use=Al apretar el botón de '{0}', usted confirma que acepta nuestros <br> Terminos de uso y Política de Privacidad
+label.have_account=Ya tiene una cuenta? <a href="/user/logIn">{0}</a>
+
+
+user.greeting=Hola, {0}!
+user.logout=Cerrar Sesión
+user.interested=Me Interesa
+user.not_interested=Ya no me Interesa
+user.interested_users=Usuarios interesados
+user.create_proposal=Crear propuesta
+
+
+property.no_users_interested=No hay otros usuarios interesados en esta propiedad
+property.no_special_rules=Esta propiedad no tiene reglas especiales
+property.no_special_services=Esta propiedad no tiene servicios especiales
+
+host.publish_property=Publicar una propiedad
+
+system.successfully_uploaded=Las imágenes fueron subidas correctamente!
+system.upload_error=Por favor subir por lo menos 1 imágen de la propiedad
+system.property.no_images_error=Oops, no hay imágenes para esta propiedad
+system.must_be_logged_in_interest=Debe iniciar sesión para mostrar interés
+system.invalid_user_or_pass=Usuario o contraseña inválido
+
+forms.image_upload_instructions=Subir hasta 4 imagenes de la propiedad
+forms.upload_picture=Subir imágen {0}
+forms.name=Nombre
+forms.description=Descripción
+forms.property_type=Tipo de Propiedad:
+forms.choose=Elegir
+forms.house=Casa
+forms.apartment=Departamento
+forms.loft=Loft
+forms.upload=Subir
+forms.neighborhood=Barrio:
+forms.privacy=Privacidad: 
+forms.privacy.individual=Individual
+forms.privacy.shared=Compartido
+forms.capacity=Capacity
+forms.rent_per_month=Renta por mes:
+forms.rules=Reglas:
+forms.services=Servicios:
+forms.email=Tu Email:
+
+
+placeholder.choose_file=Elegir Archivo
+placeholder.include_details=Incluir más detalles de la propiedad...
+placeholder.bio_placeholder=Contanos un poco sobre vos...
+
+signup.email=Tu dirección de email
+signup.password=Contraseña
+signup.re_password=Reescriba su contraseña
+signup.first_name=Nombre
+signup.last_name=Apellido
+signup.phone_number=Número de teléfono
+signup.birth_date=Fecha de Nacimiento
+signup.university=Universidad
+signup.career=Carrera
+signup.gender=Género
+signup.gender.male=Masculino
+signup.gender.female=Femenino
+signup.gender.other=Otro
+signup.i-am=Soy un:
+
+
 
 label.profile.bio=Biografía
 label.profile.interests=Intereses
@@ -19,3 +87,4 @@ label.proposal.proposal=Propuesta
 label.proposal.accept=Aceptar
 label.proposal.decline=Rechazar
 label.proposal.cancel=Cancelar
+
