Fixed phone number validation.

--- a/persistence/src/main/resources/i18n/messages.properties
+++ b/persistence/src/main/resources/i18n/messages.properties
@@ -6,7 +6,7 @@ Pattern.email=Please provide a valid email.
 Size.password=Password length must be between {2} and {1} charcters.
 Size.repeatPassword=Please repeat your password.
 Size.bio=Please enter a Bio of length under {1} charcters.
-Range.phoneNumber=Please enter a valid phone number.
+Size.phoneNumber=Please enter a valid phone number.
 Range.universityId=Please select a university from the list.
 Range.careerId=Please select a career from the list.
 Range.gender=Please select a gender from the list.
