Polished interested button for guests, hosts and non-logged in users.

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -53,6 +53,7 @@ forms.rent_per_month=Rent per month:
 forms.rules=Rules:
 forms.services=Services:
 forms.email=Your Email:
+forms.proposal.max=Please select between 1 and {0} users.
 
 placeholder.choose_file=Choose File
 placeholder.include_details=Include more details of the property...
