--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -55,6 +55,8 @@ forms.rent_per_month=Renta por mes:
 forms.rules=Reglas:
 forms.services=Servicios:
 forms.email=Tu Email:
+forms.proposal.max=Por favor, elija entre 1 y {0} usuarios.
+
 
 
 placeholder.choose_file=Elegir Archivo
