Internationalized error messages

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -84,3 +84,30 @@ label.proposal.accept=Accept
 label.proposal.decline=Decline
 label.proposal.cancel=Cancel
 
+errors.duplicate_email=There's already an account with that email
+errors.password_mismatch=Please make sure that the passwords match
+
+#Sign Up form
+NotBlank.name=Please enter your first name.
+NotBlank.lastName=Please enter your last name.
+Pattern.email=Please provide a valid email.
+Size.password=Password length must be between {2} and {1} charcters.
+Size.repeatPassword=Please repeat your password.
+Size.bio=Please enter a Bio of length under {1} charcters.
+Size.phoneNumber=Please enter a valid phone number.
+Range.universityId=Please select a university from the list.
+Range.careerId=Please select a career from the list.
+Range.gender=Please indicate your gender from the list.
+Range.role=Please select a role from the list.
+Pattern.birthDate=Please enter the date in yyyy-MM-dd format
+
+#Property creation form
+Size.description=Please enter a name of length under {1} characters.
+Size.caption=Please enter a description of length under {1} characters.
+DecimalMin.price=Price must be of at least $1
+DecimalMax.price=Price must be under $100000000
+Range.propertyType=Please select a property type.
+Range.neighbourhoodId=Please select a neighborhood.
+Range.privacyLevel=Please select a privacy level.
+Range.capacity=Please select a value between 1 and 100
+
