--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -90,3 +90,30 @@ label.proposal.accept=Aceptar
 label.proposal.decline=Rechazar
 label.proposal.cancel=Cancelar
 
+errors.duplicate_email=Ya existe un usuario con esa dirección de mail
+errors.password_mismatch=Por favor asegurese que las contraseñas coincidan
+
+#Sign Up form
+NotBlank.name=Por favor escriba su nombre.
+NotBlank.lastName=Por favor escriba su apellido.
+Pattern.email=Por favor escriba una dirección de email válida.
+Size.password=La contraseña debe ser de entre {2} y {1} caracteres.
+Size.repeatPassword=Por favor vuelva a escribir su contraseña.
+Size.bio=Por favor escriba una biografía de menos de {1} caracteres.
+Size.phoneNumber=Por favor escriba un número de telefono válido.
+Range.universityId=Por favor seleccione una universidad de la lista.
+Range.careerId=Por favor seleccione una carrera de la lista.
+Range.gender=Por favor especifique su género.
+Range.role=Please select a role from the list.
+Pattern.birthDate=Por favor escriba la fecha en el formato yyyy-MM-dd.
+
+#Property creation form
+Size.description=Por favor escriba un nombre de menos de {1} caracteres
+Size.caption=Por favor escriba una descripción de menos de {1} caracteres.
+DecimalMin.price=El precio debe ser por lo menos $1
+DecimalMax.price=El precio debe ser menor a $100000000
+Range.propertyType=Por favor seleccione el tipo de propiedad
+Range.neighbourhoodId=Por favor seleccione el barrio
+Range.privacyLevel=Por favor seleccione el nivel de privacidad
+Range.capacity=Por favor seleccione un valor entre 1 y 100.
+
