Added working list of proposals in user profile. Added 404 page and post-delete page. Proposal buttons now show up depending on the user viewing it.

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -33,6 +33,7 @@ system.upload_error=Please upload at least 1 picture of the property.
 system.property.no_images_error=Oops, there are no images for this property
 system.must_be_logged_in_interest=You must be logged in to show interest.
 system.invalid_user_or_pass=Invalid username or password
+system.proposal.successful_delete=Successfully deleted the proposal!
 
 forms.image_upload_instructions=Upload up to 4 pictures of the property:
 forms.upload_picture= Picture {0} to upload:
@@ -82,10 +83,11 @@ label.profile.noInterests=You are not interested in any properties
 label.proposal.proposal=Proposal
 label.proposal.accept=Accept
 label.proposal.decline=Decline
-label.proposal.cancel=Cancel
+label.proposal.cancel=Drop the proposal
 
 errors.duplicate_email=There's already an account with that email
 errors.password_mismatch=Please make sure that the passwords match
+errors.page_not_found=The page that you're looking for wasn't found.
 
 #Sign Up form
 NotBlank.name=Please enter your first name.
