--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -35,6 +35,7 @@ system.upload_error=Por favor subir por lo menos 1 imágen de la propiedad
 system.property.no_images_error=Oops, no hay imágenes para esta propiedad
 system.must_be_logged_in_interest=Debe iniciar sesión para mostrar interés
 system.invalid_user_or_pass=Usuario o contraseña inválido
+system.proposal.successful_delete=La propuesta ha sido eliminada con éxito!
 
 forms.image_upload_instructions=Subir hasta 4 imagenes de la propiedad
 forms.upload_picture=Subir imágen {0}
@@ -88,10 +89,11 @@ label.profile.noInterests=No estás interesado en ninguna propiedad
 label.proposal.proposal=Propuesta
 label.proposal.accept=Aceptar
 label.proposal.decline=Rechazar
-label.proposal.cancel=Cancelar
+label.proposal.cancel=Cancelar la propuesta
 
 errors.duplicate_email=Ya existe un usuario con esa dirección de mail
 errors.password_mismatch=Por favor asegurese que las contraseñas coincidan
+errors.page_not_found=No se encontró la página que usted está buscando.
 
 #Sign Up form
 NotBlank.name=Por favor escriba su nombre.
