Proposal functinality is now complete. Mails are sent when the proposal is created with a link to the proposal, and mails are sent when a proposal is deleted or when a user declines it (which also deletes it). Also fixed issue #55 with the profile.

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -14,6 +14,8 @@ label.host=Host
 label.guest=Student
 label.terms_of_use=By clicking the '{0}' button, you confirm that you accept our <br> Terms of use and Privacy Policy.
 label.have_account=Have an account? <a href="/user/logIn">{0}</a>
+label.proposal.already_replied=You have already replied to this proposal.
+label.profile.no_proposals=This user isn't participating in any proposals.
 
 user.greeting=Hi, {0}!
 user.logout=Log out
@@ -25,6 +27,9 @@ user.create_proposal=Create proposal
 property.no_users_interested=No other users have shown interest in this property!
 property.no_special_rules=This property has no special rules
 property.no_special_services=This property has no special services
+
+proposal.no_users_in_proposal=There are no users in this proposal.
+
 
 host.publish_property=Publish a property
 
