--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -14,6 +14,8 @@ label.host=Propietario
 label.guest=Estudiante
 label.terms_of_use=Al apretar el botón de '{0}', usted confirma que acepta nuestros <br> Terminos de uso y Política de Privacidad
 label.have_account=Ya tiene una cuenta? <a href="/user/logIn">{0}</a>
+label.proposal.already_replied=You have already replied to this proposal.
+label.profile.no_proposals=Este usuario no es parte de ninguna propuesta.
 
 
 user.greeting=Hola, {0}!
@@ -27,6 +29,8 @@ user.create_proposal=Crear propuesta
 property.no_users_interested=No hay otros usuarios interesados en esta propiedad
 property.no_special_rules=Esta propiedad no tiene reglas especiales
 property.no_special_services=Esta propiedad no tiene servicios especiales
+
+proposal.no_users_in_proposal=No hay usuarios en esta propuesta.
 
 host.publish_property=Publicar una propiedad
 
