Whoops, it now works forreal

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -13,7 +13,7 @@ label.property=Property
 label.host=Host
 label.guest=Student
 label.terms_of_use=By clicking the '{0}' button, you confirm that you accept our <br> Terms of use and Privacy Policy.
-label.have_account=Have an account? <a href="${loginUrl}">{0}</a>
+label.have_account=Have an account?
 label.proposal.already_replied=You have already replied to this proposal.
 label.profile.no_proposals=This user isn't participating in any proposals.
 
