--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -13,7 +13,7 @@ label.property=Propiedad
 label.host=Propietario
 label.guest=Estudiante
 label.terms_of_use=Al apretar el botón de '{0}', usted confirma que acepta nuestros <br> Terminos de uso y Política de Privacidad
-label.have_account=Ya tiene una cuenta? <a href="/user/logIn">{0}</a>
+label.have_account=Ya tiene una cuenta?
 label.proposal.already_replied=You have already replied to this proposal.
 label.profile.no_proposals=Este usuario no es parte de ninguna propuesta.
 
