--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -17,6 +17,10 @@ label.have_account=Have an account?
 label.proposal.already_replied=You have already replied to this proposal.
 label.profile.no_proposals=This user isn't participating in any proposals.
 
+homepage.welcome=Welcome to AluProp
+homepage.description=Find housing and connect with other students like never before
+homepage.go=Go
+
 user.greeting=Hi, {0}!
 user.logout=Log out
 user.interested=I'm Interested
