--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -17,6 +17,9 @@ label.have_account=Ya tiene una cuenta?
 label.proposal.already_replied=You have already replied to this proposal.
 label.profile.no_proposals=Este usuario no es parte de ninguna propuesta.
 
+homepage.welcome=Bienvenido a AluProp
+homepage.description=Encontrá alojamiento y conectá con otros estudiantes como nunca antes
+homepage.go=Ir
 
 user.greeting=Hola, {0}!
 user.logout=Cerrar Sesión
