Create non-trivial search (#54)
* Normal search done and start of vertical search

* Finish backend of advancedSearch

* Front and form but broken

* Fix search menu issues

* Fix minor issues & add tests

* Fix arguments of advancedSearch and add some validations

* Connecting form

* Query works

* Modify condition so that query makes sense

* Query works like a charm

* Validation enables no parameters in search

* Minor conditions fix to query

* Only one search button but horrible

* Tag with empty body shouldn't have closing tag

* remove unnecesary comment

* See the search bar from every view

* Search Buttons are now in order.

* Search bar buttons are now in order.

* Fix button appearance in Chrome.

* Empty search should return all elements. Fixed some validations

* Send values via mav to advancedSearcForm

* Internacionalization of search bar placeholder.

* Small style changes on search

* Search menu doesn't disappear when options are selected anymore.

* Advanced search menu now works on all pages. Also added 404 page when trying to access profile without being logged in.

* Search logic fix

* Fix search logic

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -13,7 +13,9 @@ label.property=Property
 label.host=Host
 label.guest=Student
 label.terms_of_use=By clicking the '{0}' button, you confirm that you accept our <br> Terms of use and Privacy Policy.
-label.have_account=Have an account?
+label.have_account=Have an account? <a href="/user/logIn">{0}</a>
+label.search=Search
+label.profile=Profile
 label.proposal.already_replied=You have already replied to this proposal.
 label.profile.no_proposals=This user isn't participating in any proposals.
 
@@ -60,6 +62,8 @@ forms.privacy.individual=Individual
 forms.privacy.shared=Shared
 forms.capacity=Capacity
 forms.rent_per_month=Rent per month:
+forms.rent_per_month_min=Min
+forms.rent_per_month_max=Max
 forms.rules=Rules:
 forms.services=Services:
 forms.email=Your Email:
