--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -13,7 +13,9 @@ label.property=Propiedad
 label.host=Propietario
 label.guest=Estudiante
 label.terms_of_use=Al apretar el botón de '{0}', usted confirma que acepta nuestros <br> Terminos de uso y Política de Privacidad
-label.have_account=Ya tiene una cuenta?
+label.have_account=Ya tiene una cuenta? <a href="/user/logIn">{0}</a>
+label.search=Búsqueda
+label.profile=Perfil
 label.proposal.already_replied=You have already replied to this proposal.
 label.profile.no_proposals=Este usuario no es parte de ninguna propuesta.
 
@@ -27,7 +29,6 @@ user.interested=Me Interesa
 user.not_interested=Ya no me Interesa
 user.interested_users=Usuarios interesados
 user.create_proposal=Crear propuesta
-
 
 property.no_users_interested=No hay otros usuarios interesados en esta propiedad
 property.no_special_rules=Esta propiedad no tiene reglas especiales
@@ -60,6 +61,8 @@ forms.privacy.individual=Individual
 forms.privacy.shared=Compartido
 forms.capacity=Capacity
 forms.rent_per_month=Renta por mes:
+forms.rent_per_month_min=Mínimo
+forms.rent_per_month_max=Máximo
 forms.rules=Reglas:
 forms.services=Servicios:
 forms.email=Tu Email:
