Added "Search results" label

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -18,6 +18,7 @@ label.search=Search
 label.profile=Profile
 label.proposal.already_replied=You have already replied to this proposal.
 label.profile.no_proposals=This user isn't participating in any proposals.
+label.search_results=Search results:
 
 homepage.welcome=Welcome to AluProp
 homepage.description=Find housing and connect with other students like never before
