--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -16,8 +16,9 @@ label.terms_of_use=Al apretar el botón de '{0}', usted confirma que acepta nues
 label.have_account=Ya tiene una cuenta? <a href="/user/logIn">{0}</a>
 label.search=Búsqueda
 label.profile=Perfil
-label.proposal.already_replied=You have already replied to this proposal.
+label.proposal.already_replied=Usted ya ha respondido a esta propuesta.
 label.profile.no_proposals=Este usuario no es parte de ninguna propuesta.
+label.search_results=Resultados de la búsqueda:
 
 homepage.welcome=Bienvenido a AluProp
 homepage.description=Encontrá alojamiento y conectá con otros estudiantes como nunca antes
