Custom label for no search results.

--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -19,6 +19,7 @@ label.profile=Perfil
 label.proposal.already_replied=Usted ya ha respondido a esta propuesta.
 label.profile.no_proposals=Este usuario no es parte de ninguna propuesta.
 label.search_results=Resultados de la búsqueda:
+label.search.no_properties=No se han encontrado propiedades para la búsqueda.
 
 homepage.welcome=Bienvenido a AluProp
 homepage.description=Encontrá alojamiento y conectá con otros estudiantes como nunca antes
