--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -19,6 +19,8 @@ label.profile=Profile
 label.proposal.already_replied=You have already replied to this proposal.
 label.profile.no_proposals=This user isn't participating in any proposals.
 label.search_results=Search results:
+label.search.no_properties=No properties found for the search.
+
 
 homepage.welcome=Welcome to AluProp
 homepage.description=Find housing and connect with other students like never before
