Added delete property functionality, polished emails, fixed internationalization with "Capacity" label, search bar, and property details.

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -6,20 +6,24 @@ label.spanish=Spanish
 label.english=English
 label.properties.seeMore=See more
 label.properties.noProperties=Oops, there are no properties loaded
+label.properties.delete=Delete property
+label.properties.in=in
+system.property.successful_delete=The property was deleted successfully!
 label.forgot_password=Forgot?
 label.password=Your password
 label.remember_me=Remember me
 label.property=Property
 label.host=Host
 label.guest=Student
-label.terms_of_use=By clicking the '{0}' button, you confirm that you accept our <br> Terms of use and Privacy Policy.
-label.have_account=Have an account? <a href="/user/logIn">{0}</a>
+label.terms_of_use=By clicking the 'Sign Up' button, you confirm that you accept our <br> Terms of use and Privacy Policy.
+label.have_account=Have an account?
 label.search=Search
 label.profile=Profile
 label.proposal.already_replied=You have already replied to this proposal.
 label.profile.no_proposals=This user isn't participating in any proposals.
 label.search_results=Search results:
 label.search.no_properties=No properties found for the search.
+label.guests=guests
 
 
 homepage.welcome=Welcome to AluProp
