--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -6,20 +6,25 @@ label.spanish=Español
 label.english=Inglés
 label.properties.seeMore=Ver más
 label.properties.noProperties=Ups, no hay más propiedades
+label.properties.delete=Eliminar propiedad
+label.properties.in=en
+system.property.successful_delete=La propiedad ha sido eliminada con éxito!
 label.forgot_password=Olvidaste?
 label.password=Tu Contraseña
 label.remember_me=Recordarme
 label.property=Propiedad
 label.host=Propietario
 label.guest=Estudiante
-label.terms_of_use=Al apretar el botón de '{0}', usted confirma que acepta nuestros <br> Terminos de uso y Política de Privacidad
-label.have_account=Ya tiene una cuenta? <a href="/user/logIn">{0}</a>
+label.terms_of_use=Al apretar el botón de 'Registrarse', usted confirma que acepta nuestros <br> Terminos de uso y Política de Privacidad
+label.have_account=Ya tiene una cuenta?
 label.search=Búsqueda
 label.profile=Perfil
 label.proposal.already_replied=Usted ya ha respondido a esta propuesta.
 label.profile.no_proposals=Este usuario no es parte de ninguna propuesta.
 label.search_results=Resultados de la búsqueda:
 label.search.no_properties=No se han encontrado propiedades para la búsqueda.
+label.guests=huéspedes
+
 
 homepage.welcome=Bienvenido a AluProp
 homepage.description=Encontrá alojamiento y conectá con otros estudiantes como nunca antes
@@ -61,7 +66,7 @@ forms.neighborhood=Barrio:
 forms.privacy=Privacidad: 
 forms.privacy.individual=Individual
 forms.privacy.shared=Compartido
-forms.capacity=Capacity
+forms.capacity=Capacidad
 forms.rent_per_month=Renta por mes:
 forms.rent_per_month_min=Mínimo
 forms.rent_per_month_max=Máximo
