Proposal now shows the creator along with the other members.

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -20,6 +20,7 @@ label.have_account=Have an account?
 label.search=Search
 label.profile=Profile
 label.proposal.already_replied=You have already replied to this proposal.
+label.proposal.your_prpoperty=This is your property.
 label.profile.no_proposals=This user isn't participating in any proposals.
 label.search_results=Search results:
 label.search.no_properties=No properties found for the search.
