--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -20,6 +20,7 @@ label.have_account=Ya tiene una cuenta?
 label.search=Búsqueda
 label.profile=Perfil
 label.proposal.already_replied=Usted ya ha respondido a esta propuesta.
+label.proposal.your_prpoperty=Esta es su propiedad
 label.profile.no_proposals=Este usuario no es parte de ninguna propuesta.
 label.search_results=Resultados de la búsqueda:
 label.search.no_properties=No se han encontrado propiedades para la búsqueda.
