Fixed navbar buttons, fixed checkboxes in detailedProperty.

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -68,7 +68,7 @@ forms.neighborhood=Neighborhood:
 forms.privacy=Privacy
 forms.privacy.individual=Individual
 forms.privacy.shared=Shared
-forms.capacity=Capacity
+forms.capacity=Capacity:
 forms.rent_per_month=Rent per month:
 forms.rent_per_month_min=Min
 forms.rent_per_month_max=Max
