--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -67,7 +67,7 @@ forms.neighborhood=Barrio:
 forms.privacy=Privacidad: 
 forms.privacy.individual=Individual
 forms.privacy.shared=Compartido
-forms.capacity=Capacidad
+forms.capacity=Capacidad:
 forms.rent_per_month=Renta por mes:
 forms.rent_per_month_min=Mínimo
 forms.rent_per_month_max=Máximo
