Fix typos in property detail

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -41,6 +41,10 @@ user.create_proposal=Create proposal
 property.no_users_interested=No other users have shown interest in this property!
 property.no_special_rules=This property has no special rules
 property.no_special_services=This property has no special services
+property.rules=Rules
+property.services=Services
+property.description=Description
+
 
 proposal.no_users_in_proposal=There are no users in this proposal.
 
