--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -41,6 +41,10 @@ user.create_proposal=Crear propuesta
 property.no_users_interested=No hay otros usuarios interesados en esta propiedad
 property.no_special_rules=Esta propiedad no tiene reglas especiales
 property.no_special_services=Esta propiedad no tiene servicios especiales
+property.rules=Reglas
+property.services=Servicios
+property.description=Descripción
+
 
 proposal.no_users_in_proposal=No hay usuarios en esta propuesta.
 
