Fixed interested user checkboxes showing up for hosts, fixed publish/create property button label.

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -46,6 +46,7 @@ proposal.no_users_in_proposal=There are no users in this proposal.
 
 
 host.publish_property=Publish a property
+host.publish_property_button=Publish property
 
 system.successfully_uploaded=The pictures were successfully uploaded!
 system.upload_error=Please upload at least 1 picture of the property.
