--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -45,6 +45,7 @@ property.no_special_services=Esta propiedad no tiene servicios especiales
 proposal.no_users_in_proposal=No hay usuarios en esta propuesta.
 
 host.publish_property=Publicar una propiedad
+host.publish_property_button=Publicar propiedad
 
 system.successfully_uploaded=Las imágenes fueron subidas correctamente!
 system.upload_error=Por favor subir por lo menos 1 imágen de la propiedad
