Added call to action on profile when the user has no interests.

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -104,7 +104,9 @@ signup.i-am=I am a.
 label.profile.bio=Bio
 label.profile.interests=Interests
 label.profile.proposals=Proposals
-label.profile.noInterests=You are not interested in any properties
+label.profile.noInterests=You are not interested in any properties.
+label.profile.findAProperty=Find one that suits you!
+
 
 label.proposal.proposal=Proposal
 label.proposal.accept=Accept
