--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -107,7 +107,8 @@ signup.i-am=Soy un:
 label.profile.bio=Biografía
 label.profile.interests=Intereses
 label.profile.proposals=Propuestas
-label.profile.noInterests=No estás interesado en ninguna propiedad
+label.profile.noInterests=No estás interesado en ninguna propiedad.
+label.profile.findAProperty=Encuentra alguna que te interese!
 
 label.proposal.proposal=Propuesta
 label.proposal.accept=Aceptar
