Front end is ready for displaying the properties that belong to a user on its profile.

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -22,6 +22,7 @@ label.profile=Profile
 label.proposal.already_replied=You have already replied to this proposal.
 label.proposal.your_prpoperty=This is your property.
 label.profile.no_proposals=This user isn't participating in any proposals.
+label.profile.no_properties=This user hasn't published any properties.
 label.search_results=Search results:
 label.search.no_properties=No properties found for the search.
 label.guests=guests
@@ -104,6 +105,7 @@ signup.i-am=I am a.
 label.profile.bio=Bio
 label.profile.interests=Interests
 label.profile.proposals=Proposals
+label.profile.properties=Properties
 label.profile.noInterests=You are not interested in any properties.
 label.profile.findAProperty=Find one that suits you!
 
