--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -22,6 +22,7 @@ label.profile=Perfil
 label.proposal.already_replied=Usted ya ha respondido a esta propuesta.
 label.proposal.your_prpoperty=Esta es su propiedad
 label.profile.no_proposals=Este usuario no es parte de ninguna propuesta.
+label.profile.no_properties=Este usuario ha publicado ninguna propiedad.
 label.search_results=Resultados de la búsqueda:
 label.search.no_properties=No se han encontrado propiedades para la búsqueda.
 label.guests=huéspedes
@@ -107,6 +108,7 @@ signup.i-am=Soy un:
 label.profile.bio=Biografía
 label.profile.interests=Intereses
 label.profile.proposals=Propuestas
+label.profile.properties=Propiedades
 label.profile.noInterests=No estás interesado en ninguna propiedad.
 label.profile.findAProperty=Encuentra alguna que te interese!
 
