Throw error when invalid price range

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -147,3 +147,4 @@ typeMismatch.filteredSearchForm.capacity=Capacity must be a numerical value
 typeMismatch.filteredSearchForm.minPrice=The minimum price must be a numerical value
 typeMismatch.filteredSearchForm.maxPrice=The maximum price must be a numerical value
 
+system.rangeError=The minimum price can't be greater than the maximum price
