--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -149,3 +149,5 @@ typeMismatch.filteredSearchForm.capacity=La capacidad debe ser un número
 typeMismatch.filteredSearchForm.minPrice=El precio mínimo debe ser un número
 typeMismatch.filteredSearchForm.maxPrice=El precio máximo debe ser un número
 
+system.rangeError=El precio mínimo no puede ser mayor al precio máximo
+
