Make the 404 error page more presentable

--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -119,7 +119,8 @@ label.proposal.cancel=Cancelar la propuesta
 
 errors.duplicate_email=Ya existe un usuario con esa dirección de mail
 errors.password_mismatch=Por favor asegurese que las contraseñas coincidan
-errors.page_not_found=No se encontró la página que usted está buscando.
+error.404=Error 404: Página no encontrada
+error.404.subText=No pudimos encontrar la página que estás buscando :( apretá <a href=\"{0}\"> acá </a> para volver a la página de incio 
 
 #Sign Up form
 NotBlank.name=Por favor escriba su nombre.
