Host properties in profile and status front

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -23,6 +23,7 @@ label.proposal.already_replied=You have already replied to this proposal.
 label.proposal.your_prpoperty=This is your property.
 label.profile.no_proposals=This user isn't participating in any proposals.
 label.profile.no_properties=This user hasn't published any properties.
+label.profile.your_properties=Your properties
 label.search_results=Search results:
 label.search.no_properties=No properties found for the search.
 label.guests=guests
