--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -23,6 +23,7 @@ label.proposal.already_replied=Usted ya ha respondido a esta propuesta.
 label.proposal.your_prpoperty=Esta es su propiedad
 label.profile.no_proposals=Este usuario no es parte de ninguna propuesta.
 label.profile.no_properties=Este usuario ha publicado ninguna propiedad.
+label.profile.your_properties=Tus propiedades
 label.search_results=Resultados de la búsqueda:
 label.search.no_properties=No se han encontrado propiedades para la búsqueda.
 label.guests=huéspedes
