Change view propertyDetail

--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -7,6 +7,7 @@ label.english=Inglés
 label.properties.seeMore=Ver más
 label.properties.noProperties=Ups, no hay más propiedades
 label.properties.delete=Eliminar propiedad
+label.properties.pause=Pausar propiedad
 label.properties.in=en
 system.property.successful_delete=La propiedad ha sido eliminada con éxito!
 label.forgot_password=Olvidaste?
