--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -7,6 +7,7 @@ label.english=English
 label.properties.seeMore=See more
 label.properties.noProperties=Oops, there are no properties loaded
 label.properties.delete=Delete property
+label.properties.pause=Pause property
 label.properties.in=in
 system.property.successful_delete=The property was deleted successfully!
 label.forgot_password=Forgot?
