Internationalize Active/Inactive badge

--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -47,6 +47,8 @@ property.no_special_services=Esta propiedad no tiene servicios especiales
 property.rules=Reglas
 property.services=Servicios
 property.description=Descripción
+property.active=Activa
+property.inactive=Inactiva
 
 
 proposal.no_users_in_proposal=No hay usuarios en esta propuesta.
