--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -47,6 +47,8 @@ property.no_special_services=This property has no special services
 property.rules=Rules
 property.services=Services
 property.description=Description
+property.active=Active
+property.inactive=Inactive
 
 
 proposal.no_users_in_proposal=There are no users in this proposal.
